[tool.poetry]
name = "dicts"
version = "0.1.0"
description = ""
authors = ["Kisaragi Hiu <mail@kisaragi-hiu.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
unicodedataplus = "^15.0.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
